# llama-mcp

./: .gitignore  README.md  pyproject.toml
llama_mcp/: __init__.py  agent.py  config.py  openai_client.py  sandbox.py  server.py  tools.py  transcript.py
qwen_mcp/: __init__.py  agent.py  config.py  openai_client.py  server.py  tools.py  transcript.py
scripts/: smoke.py
tests/: conftest.py  test_agent.py  test_config.py  test_openai_client.py  test_sandbox.py  test_server.py  test_tools.py  test_transcript.py
