[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-mcp"
version = "0.1.0"
description = "MCP server that delegates code-writing subtasks to a local model via llama.cpp"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
llama-mcp = "llama_mcp.server:main"

[tool.setuptools.packages.find]
include = ["llama_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
